style.css
/* General
-------------------------------------------------- */

body {
  /* so this means I might have to change the padding top for body based on what I have for navbar"
  /* maybe makes a difference once I go */
  padding-top: 120px;
}

p {
  font-family: raleway, sans-serif;
  text-align: justify;
  padding-bottom: 15px;
  font-size: 14px;
}

p.heading{
  font-size: 18px;
  letter-spacing: 1.8px;

}

.unpad {
  padding-left: 0px;
  margin-left: 0px;

}

a {
  color: rgb(150, 150, 150);
  font-weight: 300;
  text-decoration: none;
}

a:hover {
  color: rgb(51, 51, 51);
  text-decoration: none;
}

.spacing {
  padding-bottom: 30px;

}

.spacing_small {
  padding-bottom: 10px;

}



/* Nav bar
-------------------------------------------------- */

.navbar-default {
  background: white;
  border-color: white;
  font-family: raleway, sans-serif;
  padding: 35px 0px 0px 0px;
  letter-spacing: 1.8px;
}

.navbar-default .navbar-brand {
  color: black;
  font-size: 28px;
  font-family: raleway, sans-serif;
  font-weight: 800;
  vertical-align: bottom;
  /* this padding makes up for the 15 pixel weirdness when shrunk and magnified */
  padding-left: 28px;
  letter-spacing: 3px;
}

.navbar-default .navbar-nav>li>a {
  color: #7f7d7d;
  font-family: raleway, sans-serif;
  vertical-align: bottom;
  padding-bottom: 0;
  /* this padding makes up for the 15 pixel weirdness when shrunk and magnified */
  padding-right: 30px;
  padding-left: 0px;
  font-size: 13px;
}

.navbar-default .navbar-nav>li>a:hover {
  color: black;
}

.navbar-default .navbar-nav>li.active_nav>a {
  color: black;
}

/* the breakpoint for when the navbar turns into a dropdown */
@media (max-width: 768px) {
  .navbar-default .navbar-nav>li>a {
    padding-left: 30px;
  }

}

/* anything larger than a macbook pro will render like container, non-fluid
so, incrementally, there will be white space around the content */
@media (min-width: 1680px) {
  .container-fluid {
    width: 1680px;
  }

}

@media (max-width: 1680px) {
  .container-fluid {
    margin: 0px 35px 0px 35px;
  }
}


/* About
-------------------------------------------------- */

.about_banner {
  width: 100%;
  min-width: 1200px;
  padding-bottom: 30px;
}

p.about {
  font-size: 25px;
}



/* Teaching
-------------------------------------------------- */
.teaching_image {
  width: 100%;
  padding-bottom:30px;
}




/* Projects
-------------------------------------------------- */
.project_square_images {
  width: 100%;
}

.project_square {
  padding: 10px;
}

.project_square_background {
  background-color: black;
  /* this stuff centers the project text in the middle of the square */
  position: relative;
  overflow: hidden;
}


.project_container {
  /* padding must be 15 px minus padding on the project square */
  padding: 5px;
}

.project_text {
  text-align: center;
  vertical-align: middle;
  color: white;
  font-weight: 800;
  letter-spacing: 3px;
  /* this centers the project text in the middle of the square */
  position: absolute;
  margin-top: 50%;
  opacity: 0;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}


/* Individual Project Pages
-------------------------------------------------- */
/* NOTE: standard image ratio in this section is 970 : 600 */

.project_video {
  padding-top: 5px;
  padding-right: 15px;
  padding-bottom: 15px;
}

.project_images {
  padding-top: 5px;
  padding-bottom: 15px;
  width: 100%;
}

div.frame_button_wrapper {
  margin-top: 30px;
  margin-bottom: 60px;
}

a.frame_button {
  color: black;
  border: 1.5px black solid;
  padding: 12px;
  width: 100%;
  margin-right: 5px;
}

a:hover.frame_button,
a:active.frame_button,
a:focus.frame_button {
  color: white;
  background-color: black;
  -webkit-transition: color 0.5s;
  -moz-transition:    color 0.5s;
  -ms-transition:     color 0.5s;
  -o-transition:      color 0.5s;
  transition:         color 0.5s;

  -webkit-transition: background-color 0.5s;
  -moz-transition:    background-color 0.5s;
  -ms-transition:     background-color 0.5s;
  -o-transition:      background-color 0.5s;
  transition:         background-color 0.5s;
}


.project_specifics {
  padding: 1px;
}

.generative_art_gifs_wrapper {
  padding: 0px;
}

.generative_art_gif {
  width: 100%;
  padding-right: 10px;
  padding-bottom: 10px;
}

.under_construction {
  color: #d26161
}


/* CV
-------------------------------------------------- */

/* the overall categories listed on the left. */
p.cv_categories {
  font-size: 18px;
  letter-spacing: 1.8px;
  padding: 0px;
  text-align: left;
}

/* the container for each cv "chunk"
   e.g.: all of the items under work experience */
.cv_section {
  max-width: 850px;
  padding: 0px;
}

.cv_item {
  padding: 0px;
  margin-bottom: 15px;

}

.cv_headings {
  text-align: left;
}

p.cv_header, p.cv_subheader {
  font-size: 18px;
  letter-spacing: 1.8px;
  padding: 0px;
  margin: 0px;
  text-align: left;
}

p.cv_description {
  padding-top: 10px;
}

/* the container for heading details */
.cv_heading_details {
  /*text-align: right;*/
  vertical-align: bottom;
  padding-top: 5px;
}


p.cv_heading_details {
  font-size: 14px;
  padding: 0px;
  margin: 0px;
  vertical-align: bottom;
  text-align: right;
  font-weight: 300;
  /*color: #9e9d9d;*/
}

@media (max-width : 991px) {
  p.cv_heading_details {
    text-align: left;
  }
}


.col-md-12.cv_divider {
  /*width: 100%;*/
  height: 1px;
  background-color: #eee;
  margin-left: 15px;
  margin-right: 15px;
  margin-bottom: 30px;
  margin-top: 30px;
}

.cv_divider_outer {
  margin-right: 30px;
}


/* style for descriptions that are smaller --list format.
   e.g. skills, or talks, etc.
   Mostly, this is to get rid of padding on top.
*/
p.cv_description_list {
  padding-top: 2px;
}


/* for project videos already embedded inside a col-md-9 column */
.col-md-12.project_video {
  padding: 0px;
  margin: 0px;
  margin-bottom: 30px;
}

/* Contact
-------------------------------------------------- */
.massive_header {
  font-family: raleway, sans-serif;
  font-size: 100px;
  text-align: center;
}

.contact_links {
  display: inline;
  font-family: raleway, sans-serif;
}

.social [class*="fa fa-"] {
  display: inline-block;
  width: 100%;
  background-color: #cacaca;
  /*background-color: rgb(51, 51, 51);*/
  border-radius: 100px;
  color: rgb(50, 50, 50);
  color: #fff;
  height: 50px;
  line-height: 50px;
  width: 50px;
  text-align: center;
}

.social_icons {
  text-align: center;
}

.fa {
  margin: 40px 5px 5px 5px;
}

a:hover.fa,
a:active.fa,
a:focus.fa {
  /*color: rgb(51, 51, 51);*/
  color: #cacaca;
  text-decoration: none;
  background-color: rgb(50, 50, 50);
  /*background-color: #cacaca;*/
  -webkit-transition: color 0.5s;
  -moz-transition:    color 0.5s;
  -ms-transition:     color 0.5s;
  -o-transition:      color 0.5s;
  transition:         color 0.5s;

  -webkit-transition: background-color 0.5s;
  -moz-transition:    background-color 0.5s;
  -ms-transition:     background-color 0.5s;
  -o-transition:      background-color 0.5s;
  transition:         background-color 0.5s;
}

.contact {
  margin-top: 100px;
}

/* Sticky footer
-------------------------------------------------- */


html {
  position: relative;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 30px;
  padding-left: 15px;
  font-family: raleway, sans-serif;
  padding-top: 40px;
}

.col-md-12.footer_divider {
  width: 100%;
  height: 1px;
  background-color: #eee;
  /*margin-left: 15px;*/
  margin-right: 15px;
  margin-bottom: 20px;
  /*margin-top: 30px;*/
}

.footer_divider_outer {
  /*margin-ri*/
  margin-right: 15px;
}

.footer_text {
  color: #777;
  font-size: 12;
}

